Fix spacing header

--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -16,7 +16,7 @@ fieldset {
   flex-direction: column;
   color: $color-cod-gray;
   padding: 1.5rem;
-  padding-bottom: 7rem;
+  padding-bottom: 2rem;
   max-width: 95%;
   margin-top: -120px;
   background-color: white;
